TEST_PROGRAMS/VALID/08/blankFieldsStruct.go
package main


func main() {
 type point struct {
   _ int;
   _ float64
 }
	
}
