TEST_PROGRAMS/INVALID/09/blank_returns.go
package blank_returns

func main() {
    plus()
}

func plus() int {
    return _
}
